# mailtools

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  htmlmail.cpp  htmlmail.h  mailnetworkmanager.cpp  mailnetworkmanager.h  mailtools.pro  mailview.h  main.cpp  notmuch-inherit-tag
addresses/: CMakeLists.txt  addressbook.cpp  addressbook.h  vcard.h
mailfile/: .gitignore  CMakeLists.txt  Makefile  filterscript.c  filterscript.h  logging.c  logging.h  maildir.c  maildir.h  mailfile.c  message.c  message.h  run-tests.c  strutil.c  strutil.h  test_maildir.c
util/: CMakeLists.txt  logging.c  maildir.c  maildir.h
viewmail/: .gitignore  CMakeLists.txt  assets.qrc  gmime-decls.h  header-template.txt  htmlmail.cpp  htmlmail.h  mailnetworkmanager.cpp  mailnetworkmanager.h  mailview.cpp  mailview.h  mailview.ui  main.cpp  statichttpreply.cpp  statichttpreply.h  viewmail.pro
